fix: myphoto position and footer img position
my photo was overflowing the container div
icons of footer was misaligned

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -58,9 +58,7 @@ main{
 }
 
 #myphoto{
-    display: flex;
-    height: 100%;
-    width: 100%;
+    display: flex;        
     overflow: hidden;
     border-radius: 6rem;
     align-items: center;
@@ -69,7 +67,7 @@ main{
 }
 
 #myphoto > img{
-    object-fit: cover;
+    height: 100%;
 }
 
 #description{
@@ -114,5 +112,5 @@ footer a{
 }
 
 footer a img {
-    object-fit: fill;
+    width: 100%;
 }
